--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: '*.yml'
-    translation: '%two_letters_code%.yml'
+  - source: /en.yml
+    translation: /%two_letters_code%.yml
