--- a/en.yml
+++ b/en.yml
@@ -6,3 +6,5 @@ booking:
   home: Calendly
   text: Calendly helps you schedule meetings without the back-and-forth emails
   message: Get started for free. No credit card required.
+  video_watch: Watch our video
+  team_scheduling: TEAM SCHEDULING
