--- a/en.yml
+++ b/en.yml
@@ -10,5 +10,6 @@ booking:
   team_scheduling: branch_2
   sign_up: Sign Up
   enter_email: Enter your email
-  random: random
+  random: balderdash
   title: title
+  subheader: Hi Bill!
